# binutils

./: ChangeLog  MAINTAINERS  Makefile.def  Makefile.in  Makefile.tpl  cgc-dev-toggle.sh  config.guess  config.rpath  config.sub  configure  configure.ac  libtool.m4  ltmain.sh  md5.sum  src-release
bfd/: ChangeLog  ChangeLog-0001  ChangeLog-0203  ChangeLog-2004  ChangeLog-2005  ChangeLog-2006  ChangeLog-2007  ChangeLog-2008  ChangeLog-2009  ChangeLog-2010  ChangeLog-2011  ChangeLog-2012  ChangeLog-9193  ChangeLog-9495  ChangeLog-9697  ChangeLog-9899  Makefile.am  Makefile.in  aoutf1.h  archive.c  archive64.c  archures.c  bfd-in.h  bfd-in2.h  bfd.c  cgc-attrs.c  cgc-bfd.h  cgc-eh-frame.c  cgc-hppa.h  cgc-ifunc.c  cgc-linux-psinfo.h  cgc-m10200.c  cgc-m10300.c  cgc-nacl.c  cgc-nacl.h  cgc-s390-common.c  cgc-strtab.c  cgc-vxworks.c  cgc-vxworks.h  cgc.c  (+164 more)
bfd/doc/: ChangeLog  ChangeLog-9103  Makefile.am  Makefile.in  archures.texi  bfd.info  bfd.texinfo  bfdint.texi  bfdt.texi  cgc.texi  linker.texi  mmo.texi  reloc.texi  section.texi  syms.texi  targets.texi
bfd/hosts/: x86-64linux.h
bfd/po/: BLD-POTFILES.in  SRC-POTFILES.in  bfd.pot  da.gmo  da.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  id.gmo  id.po  ja.gmo  ja.po  ro.gmo  ro.po  ru.gmo  ru.po  rw.po  sv.gmo  sv.po  tr.gmo  tr.po  uk.gmo  uk.po  vi.gmo  vi.po  zh_CN.po
binutils/: ChangeLog  ChangeLog-0001  ChangeLog-0203  ChangeLog-2004  ChangeLog-2005  ChangeLog-2006  ChangeLog-2007  ChangeLog-2008  ChangeLog-2009  ChangeLog-2010  ChangeLog-2011  ChangeLog-2012  ChangeLog-9197  ChangeLog-9899  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  addr2line.c  cgccomm.c  cgccomm.h  cgcedit.c  configure  configure.com  configure.in  cxxfilt.c  dlltool.c  dwarf.c  embedspu.sh  makefile.vms  nm.c  objcopy.c  objdump.c  od-xcoff.c  readcgc.c  unwind-ia64.c  unwind-ia64.h
binutils/doc/: Makefile.am  Makefile.in  binutils.info  binutils.texi  cgcedit.1  nm.1  objcopy.1  objdump.1  readcgc.1  size.1  strings.1  strip.1
binutils/po/: POTFILES.in  bg.gmo  bg.po  binutils.pot  da.gmo  da.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  hr.gmo  hr.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  ro.gmo  ro.po  ru.gmo  ru.po  rw.po  sk.gmo  sk.po  sv.gmo  sv.po  tr.gmo  tr.po  uk.gmo  uk.po  vi.gmo  vi.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
binutils/testsuite/: ChangeLog  ChangeLog-0411  ChangeLog-9303
cgccpp/: ChangeLog  README  arm.h  cgccpp.h  cgccpp_file.h  cgccpp_internal.h  cgccpp_swap.h  dwarf.h  i386.h  mips.h  powerpc.h  sparc.h  tilegx.h  x86_64.h
config/: ChangeLog  cgc.m4  largefile.m4  picflag.m4  tcl.m4  weakref.m4
cpu/: frv.opc  m32c.opc  mep-sample-ucidsp.cpu  mep.opc
debian/: binutils-cgc-i386.lintian-overrides  changelog  control  copyright  rules
etc/: configure.info  configure.texi
gas/: CONTRIBUTORS  ChangeLog  ChangeLog-0001  ChangeLog-0203  ChangeLog-2004  ChangeLog-2005  ChangeLog-2006  ChangeLog-2007  ChangeLog-2008  ChangeLog-2009  ChangeLog-2010  ChangeLog-2011  ChangeLog-2012  ChangeLog-9295  ChangeLog-9697  ChangeLog-9899  Makefile.am  Makefile.in  NEWS  app.c  as.c  as.h  bfin-parse.c  config.in  configure  configure.com  configure.in  configure.tgt  ecoff.c  ehopt.c  listing.c  m68k-parse.c  macro.c  obj.h  read.c  stabs.c  subsegs.h  symbols.c  write.c  write.h
gas/config/: aout_gnu.h  bfin-parse.y  e-criscgc.c  e-i386cgc.c  e-mipscgc.c  m68k-parse.h  m68k-parse.y  obj-cgc.c  obj-cgc.h  obj-coff.c  obj-fdpiccgc.c  obj-fdpiccgc.h  obj-multi.h  tc-aarch64.c  tc-aarch64.h  tc-alpha.c  tc-alpha.h  tc-arc.c  tc-arc.h  tc-arm.c  tc-arm.h  tc-avr.h  tc-bfin.c  tc-bfin.h  tc-cr16.c  tc-cr16.h  tc-cris.c  tc-cris.h  tc-crx.c  tc-crx.h  tc-d10v.c  tc-d10v.h  tc-d30v.c  tc-d30v.h  tc-dlx.h  tc-epiphany.c  tc-epiphany.h  tc-fr30.h  tc-frv.c  tc-frv.h  (+90 more)
gas/doc/: Makefile.in  all.texi  as.1  as.info  as.texinfo  c-aarch64.texi  c-alpha.texi  c-arm.texi  c-cris.texi  c-hppa.texi  c-i370.texi  c-i386.texi  c-i860.texi  c-ia64.texi  c-mips.texi  c-mmix.texi  c-ppc.texi  c-rx.texi  c-s390.texi  c-sparc.texi  h8.texi  internals.texi
gas/po/: POTFILES.in  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  gas.pot  id.gmo  id.po  ja.gmo  ja.po  ru.po  rw.po  tr.gmo  tr.po
gas/testsuite/: ChangeLog  ChangeLog-2004  ChangeLog-2005  ChangeLog-2006  (+7 more)
gold/: ChangeLog  Makefile.am  Makefile.in  README  archive.cc  archive.h  arm-reloc-property.cc  arm-reloc.def  arm.cc  attributes.cc  binary.cc  binary.h  common.cc  compressed_output.cc  compressed_output.h  configure  configure.ac  configure.tgt  copy-relocs.cc  copy-relocs.h  defstd.cc  dwarf_reader.cc  dwarf_reader.h  dwp.cc  dynobj.cc  dynobj.h  ehframe.cc  ehframe.h  expression.cc  fileread.cc  fileread.h  freebsd.h  gc.h  gdb-index.cc  gold.cc  i386.cc  icf.cc  icf.h  incremental-dump.cc  incremental.cc  (+43 more)
gprof/: ChangeLog-9203  Makefile.in  README  cg_print.c  configure  corefile.c  gmon_io.c
include/: ChangeLog  ChangeLog-9103  bfdlink.h  plugin-api.h
intl/: libgnuintl.h
ld/: ChangeLog  ChangeLog-0001  ChangeLog-0203  ChangeLog-2004  ChangeLog-2005  ChangeLog-2006  ChangeLog-2007  ChangeLog-2008  ChangeLog-2009  ChangeLog-2010  ChangeLog-2011  ChangeLog-2012  ChangeLog-9197  ChangeLog-9899  Makefile.am  Makefile.in  NEWS  README  cgc-hints-local.h  config.in  configure  configure.host  configure.in  configure.tgt  genscripts.sh  ld.1  ld.h  ld.info  ld.texinfo  ldemul.c  ldemul.h  ldgram.c  ldgram.h  ldgram.y  ldint.texinfo  ldlang.c  ldlang.h  ldmain.c  ldmisc.c  lexsup.c  (+2 more)
libiberty/: ChangeLog  Makefile.in  configure  simple-object-cgc.c  simple-object-common.h  simple-object.c
opcodes/: ChangeLog  ChangeLog-0001  ChangeLog-0203  ChangeLog-2005  ChangeLog-2008  ChangeLog-2012  ChangeLog-9297  ChangeLog-9899  aarch64-dis.c  arc-dis.c  arc-ext.c  arm-dis.c  configure  configure.in  frv-opc.c  frv-opc.h  i386-opc.tbl  ia64-dis.c  ia64-opc.c  m32c-dis.c  mep-asm.c  mep-dis.c  mep-opc.c  mips-dis.c  nios2-dis.c  ppc-dis.c  s390-opc.txt  score-dis.c  score7-dis.c  sh64-dis.c  tilegx-dis.c  tilepro-dis.c
tests/: test_binutils.py
(+2931 files in other folders)
